...
                                            </ThemedView>
                                        </TouchableOpacity>
                                    </Swipeable>
                                );
                            })}
                            {!plantId && (
                                <Button text="Añadir lugar" onPress={handleAdd} />
                            )}
                            <View style={{ marginBottom: 24 }} />
                        </ScrollView>
                    </GestureHandlerRootView>
                </>
            )}
...
