...
      >
        <TouchableOpacity
          style={styles.deleteButtonInner}
          onPress={() => handleSwipeDelete(plantId)}
        >
          <Ionicons name="trash" size={24} color="white" />
          <Text style={styles.deleteButtonText}>Eliminar</Text>
        </TouchableOpacity>
      </Animated.View>
    );
  };

  const unitLabelsPlural = {
...
                hitSlop={{ top: 20, bottom: 20, left: 20, right: 20 }}
                style={styles.buttonMenu}
                onPress={(event) => {
                  openModal(userPlant, event);
                }}
              >
                <Ionicons accessibilityRole="image" accessibilityLabel="Menú de opciones" name="ellipsis-vertical" size={30} color={colorScheme === "dark" ? Colors.dark.text : Colors.light.text} />
              </TouchableOpacity>

            </ThemedView>
          </TouchableOpacity>
          </Swipeable>
        ))}
...
