...
                        <ThemedView style={styles.card}>
                            <View style={{ display: 'flex', flexDirection: 'column', gap: 8 }}>
                                <ThemedText type='title2'>Tareas de hoy</ThemedText>
                                <View style={{ display: 'flex', flexDirection: 'row', gap: 16, alignContent: 'center', alignItems: 'center' }}>
                                    <Ionicons name="checkmark-circle" size={42} color={colorScheme === "dark" ? Colors.dark.text : Colors.light.text} />
                                    <View>
                                        <ThemedText type='default'>Todo completado</ThemedText>
                                        <ThemedText type='subtitle'>Las tareas nuevas se muestran aquí</ThemedText>
                                    </View>

                                </View>
                            </View>
                        </ThemedView>
...
                                )}
                            </View>
                            
                            <View style={{ flex: 1, flexDirection: 'row', alignItems: 'center', justifyContent: 'flex-end' }}>
                                <View style={styles.taskCount}>
                                    <ThemedText type="subtitle" style={{ color: Colors.light.text }}>
                                        {tasks.length == 1 ? "1 tarea" : `${tasks.length} tareas`}
                                    </ThemedText>
                                </View>
                            </View>
                        </View>

                        <View style={{ flex: 1, flexShrink: 1, gap: 16, display: 'flex', flexDirection: 'column' }}>
...
