...

    return (
        <>
            <ScrollView>
                <View style={styles.body}>
                    <ThemedView style={styles.card}>
                        <ThemedText type='title2' style={{ marginBottom: 8 }}>Cuenta</ThemedText>
                        {/* Nombre */}
                        <TouchableOpacity
                            style={styles.subcardTouchable}
                            onPress={() => {
                                openModal('username')
                            }}
...
