...
        return require('../assets/images/low-humidity.png');
    }
  };

  const locations: any = {
    indoor: { value: "indoor", label: "Interior" },
    outdoor: { value: "outdoor", label: "Exterior" },
  };
  const sunlightExposures: any = {
    indirect_sun: { value: "indirect_sun", label: "Luz solar indirecta" },
    full_shade: { value: "full_shade", label: "Sombra total" },
    partial_sun: { value: "partial_sun", label: "Sol parcial" },
    full_sun: { value: "full_sun", label: "A pleno sol" },
  };
  const humidities: any = {
    low: { value: "low", label: "Baja" },
    normal: { value: "normal", label: "Normal" },
    high: { value: "high", label: "Alta" },
  };

  useEffect(() => {
    const userId = getUserId();
...
            }}
          >
            <Image
              source={require('../assets/images/location.png')}
              style={{ width: 90, height: 90, borderRadius: 50, backgroundColor: '#d3d3d3' }}
            />
            <ThemedText type="subtitle" style={{ textAlign: 'center' }}>Personalizado</ThemedText>
          </TouchableOpacity>
        </View>
      )}
      {step === 2 && (
        <View>
          <ThemedText type='title' style={styles.text}>Nombre del lugar</ThemedText>
          <ThemedText type="subtitle" style={styles.text}>Introduce el nombre del lugar.</ThemedText>
          <View style={styles.searchContainer}>
            <TextInput
              value={formData.name}
              placeholderTextColor={colorScheme === 'dark' ? Colors.dark.placeholder : Colors.light.placeholder}
              onChangeText={value => handleChange("name", value)}
...
          </View>

          <View style={{ flexDirection: 'row', justifyContent: 'space-between', alignItems: 'center', marginVertical: 16 }}>

            <View style={{ flex: 1, marginRight: 8 }}>
              <Button
                text="Siguiente"
                onPress={handleNext}
                disabled={formData.name.trim() === ""}
              />
              <Button text="Atrás" onPress={handleBack} />
            </View>
          </View>
...
              <ThemedView style={styles.card}>
                <Image
                  source={require('../assets/images/low-humidity.png')}
                  style={{ width: 100, height: 100, borderRadius: 8 }}
                />
                <View style={{ flex: 1, flexShrink: 1 }}>
                  <ThemedText type='title2'>Poca humedad</ThemedText>
                  <ThemedText type='subtitle'>Ambiente muy seco</ThemedText>
                </View>
              </ThemedView>
            </TouchableOpacity>
            <TouchableOpacity
              onPress={() => { handleChange("humidity", "normal") }}
...
              </View>
            </ThemedView>
          </View>

          {/* Actions */}
          <View style={{ marginTop: 16 }}>
            <Button text="Crear" onPress={handleSubmit} />
            <Button text="Atrás" onPress={handleBack} />
          </View>
        </View>
      )}
    </LinearGradient>
  );
...
